@@ -31,7 +31,8 @@ distribution.
 #define TIXML_STRING_INCLUDED
 
 #ifdef _MSC_VER
-#pragma warning( disable : 4786 )	// Debugger truncating names.
+#pragma warning( disable : 4530 )
+#pragma warning( disable : 4786 )
 #endif
 
 #include <assert.h>
@@ -75,7 +76,7 @@ class TiXmlString
     }
 
     // Return the length of a TiXmlString
-    unsigned length () const
+    size_t length () const
 	{
 		return ( allocated ) ? current_length : 0;
 	}
@@ -158,20 +159,20 @@ class TiXmlString
     enum {	notfound = 0xffffffff,
             npos = notfound };
 
-    void append (const char *str, int len );
+    void append (const char *str, size_t len );
 
   protected :
 
     // The base string
     char * cstring;
     // Number of chars allocated
-    unsigned allocated;
+    size_t allocated;
     // Current string size
-    unsigned current_length;
+    size_t current_length;
 
     // New size computation. It is simplistic right now : it returns twice the amount
     // we need
-    unsigned assign_new_size (unsigned minimum_to_allocate)
+    size_t assign_new_size (size_t minimum_to_allocate)
     {
         return minimum_to_allocate * 2;
     }
@@ -237,6 +238,11 @@ public :
         return (* this);
     }
 } ;
+
+#ifdef _MSC_VER
+#pragma warning( default : 4530 )
+#pragma warning( default : 4786 )
+#endif
 
 #endif	// TIXML_STRING_INCLUDED
 #endif	// TIXML_USE_STL
